@@ -1,3 +1,7 @@
+2023-11-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-timeout-handler): Be more verbose.
+
 2023-10-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test05-expand-file-name-tilde): New test.
